--- a/springdoc-openapi-test-app2/pom.xml
+++ b/springdoc-openapi-test-app2/pom.xml
@@ -9,6 +9,7 @@
 		<groupId>org.springdoc</groupId>
 		<artifactId>springdoc-openapi-demos</artifactId>
 		<version>3.1.2-SNAPSHOT</version>
+		<relativePath>../pom.xml</relativePath>
 	</parent>
 	<dependencies>
 		<dependency>
