--- a/pom.xml
+++ b/pom.xml
@@ -106,6 +106,11 @@
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
+			<!-- jmx support -->
+			<dependency>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-starter-actuator</artifactId>
+			</dependency>
 		</dependencies>
 	</dependencyManagement>
 	<build>
@@ -115,41 +120,16 @@
 					<groupId>org.springframework.boot</groupId>
 					<artifactId>spring-boot-maven-plugin</artifactId>
 					<version>${spring-boot.version}</version>
-					<configuration>
-						<skip>false</skip>
-					</configuration>
-					<executions>
-						<execution>
-							<goals>
-								<goal>repackage</goal>
-							</goals>
-						</execution>
-						<execution>
-							<id>pre-integration-test</id>
-							<goals>
-								<goal>start</goal>
-							</goals>
-						</execution>
-						<execution>
-							<id>post-integration-test</id>
-							<goals>
-								<goal>stop</goal>
-							</goals>
-						</execution>
-					</executions>
 				</plugin>
 				<plugin>
 					<groupId>org.springdoc</groupId>
 					<artifactId>springdoc-openapi-maven-plugin</artifactId>
 					<version>0.2</version>
-					<executions>
-						<execution>
-							<id>integration-test</id>
-							<goals>
-								<goal>generate</goal>
-							</goals>
-						</execution>
-					</executions>
+				</plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-failsafe-plugin</artifactId>
+					<version>2.18.1</version>
 				</plugin>
 				<plugin>
 					<groupId>org.springframework.boot</groupId>
