--- a/springdoc-openapi-test-app1/src/main/resources/application.yml
+++ b/springdoc-openapi-test-app1/src/main/resources/application.yml
@@ -14,3 +14,13 @@ springdoc:
   swagger-ui:
     path: /swagger-ui.html
 
+spring:
+  jmx:
+    enabled: true
+
+
+jmx:
+  rmi:
+    port: 9001
+    host: localhost
+
