--- a/springdoc-openapi-test-app3/src/main/resources/application.yml
+++ b/springdoc-openapi-test-app3/src/main/resources/application.yml
@@ -20,5 +20,7 @@ spring:
         content:
           enabled: true
           paths: /webjars/swagger-ui/**.*
+  main:
+    allow-bean-definition-overriding: true
 springdoc:
   version: '@springdoc.version@'
